@@ -92,20 +92,28 @@ AC_CHECK_LIB(utempter,addToUtmp,
 [
 UTMPER_LIBS="-lutempter -lutil"
 AC_SUBST(UTMPER_LIBS)
-AC_DEFINE(HAVE_UTMPER)
+kik_cv_utmp=utmper
 ])
 
 AC_CHECK_LIB(util,logout,
 [
 LOGIN_LIBS="-lutil"
 AC_SUBST(LOGIN_LIBS)
-AC_DEFINE(HAVE_LOGIN)
+kik_cv_utmp=login
 ])
 
 AC_CYGWIN
 if test "$CYGWIN" = "yes" ; then
-	AC_DEFINE(UTMP_NONE)
+	kik_cv_utmp=none
+elif test -z "$kik_cv_utmp" ; then
+	if test "$ac_cv_func_setutent" = yes ; then
+		kik_cv_utmp=sysv
+	else
+		kik_cv_utmp=bsd
+	fi
 fi
+UTMP_NAME=$kik_cv_utmp
+AC_SUBST(UTMP_NAME)
 
 AC_MSG_CHECKING(for pty/tty type)
 AC_CACHE_VAL(kik_cv_pty,[
@@ -116,13 +124,8 @@ else
 fi])
 AC_MSG_RESULT($kik_cv_pty)
 
-if test "${kik_cv_pty}" = "streams" ; then
-	AC_DEFINE(PTY_STREAMS)
-else
-	if test "${kik_cv_pty}" = "bsd" ; then
-		AC_DEFINE(PTY_BSD)
-	fi
-fi
+PTY_NAME="${kik_cv_pty}"
+AC_SUBST(PTY_NAME)
 
 AC_ARG_ENABLE(debug,
 	[ --enable-debug	debug[disabled]],
